--- a/pom.xml
+++ b/pom.xml
@@ -30,11 +30,35 @@
     		<artifactId>maven-surefire-plugin</artifactId>   
     		<configuration>   
         		<includes>
-				<!-- <include>**/Ziso8583clientTest.java</include> -->
+			        <include>**/Ziso8583clientTest.java</include>
 					<include>**/AppTest.java</include>
 				</includes>
     		</configuration>  
 		</plugin>  
+			<plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <appendAssemblyId>false</appendAssemblyId>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <!-- 此处指定main方法入口的class -->
+                            <mainClass>com.xxx.uploadFile</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>assembly</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>		
     </plugins>  
 </build>
   <dependencies>
